--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/container";
+@import "components/card_category";
+@import "components/cards_categories";
