--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="page-container">
+  <div class="homepage-banner">
+    <h1 class="homepage-banner-text">Localise Limassol/</h1>
+    <h1 class="homepage-banner-text">Deep dive into the local culture</h1>
+  </div>
+
+  <div class="cards-categories">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("local_experiences.jpg")%>)">
+      Local Experiences
+    </div>
+
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("annual_events.jpg")%>)">
+      Annual Events
+    </div>
+
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("laptop_cafes.jpg")%>)">
+      Laptop friendly cafes
+    </div>
+
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("foodie_places.jpg")%>)">
+      Foodie Places
+    </div>
+  </div>
+</div>
