--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 <div class="page-container">
   <div class="homepage-banner">
-    <h1 class="homepage-banner-text">Localise Limassol/</h1>
-    <h1 class="homepage-banner-text">Deep dive into the local culture</h1>
+    <%= image_tag "banner_image.png" %>
   </div>
 
   <div class="cards-categories">
