--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,5 @@
 @import "components/container";
 @import "components/card_category";
 @import "components/cards_categories";
+@import "components/navbar";
+@import "components/footer";
