--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -2,7 +2,6 @@
   background-size: cover;
   background-position: center;
   height: 352px;
-  width: 712px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,6 +9,12 @@
   font-size: 32px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  transition: 0.2s;
+  opacity: 0.7;
+
+  &:hover {
+    // transform: scale(1.02);
+    opacity: 1.0;
+  }
 }
