--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,12 +26,14 @@
             </div>
           </li>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Limassol Fun Facts", '#', class: "nav-link" %>
+          <%# <li class="nav-item"> %>
             <%# <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%# </li> %>
+          <li>
+            <%= link_to "Limassol Fun Facts", '#', class: "nav-link text-white" %>
           </li>
           <li>
-            <%= link_to "About us", '#', class: "nav-link" %>
+            <%= link_to "About us", '#', class: "nav-link text-white" %>
           </li>
         <% end %>
       </ul>
