started building local experiences page

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,10 @@
 .page-container {
   margin: 0;
-
   // Default valus is anyway 'auto'
   // width: auto;
+}
+
+.show-container {
+  margin: 0;
+  width: 1000px;
 }
