more work on local experiences

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -5,6 +5,8 @@
 }
 
 .show-container {
-  margin: 0;
-  width: 1000px;
+  margin: 0 auto;
+  padding: 0 10px;
+  width: 1900px;
+  max-width: 100%;
 }
