--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,10 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100px;
+  height: 60px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0px;
 }
