--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #199293;
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
 }
 
 .navbar-lewagon .navbar-collapse {
