--- a/app/views/local_experiences/index.html.erb
+++ b/app/views/local_experiences/index.html.erb
@@ -4,9 +4,12 @@
     <%= link_to "All Categories", root_path, class: "btn btn-ghost" %>
   </div>
   <div class="cards-categories">
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("sunrise_swim.jpg")%>)">
-          Sunrise Swim
-        </div>
+        <%= link_to local_experience_path(@localexperience) do %>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("sunrise_swim.jpg")%>)">
+            Sunrise Swim
+          </div>
+        <% end %>
+
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("landsail.jpg")%>)">
           Land Sailing
         </div>
@@ -18,5 +21,6 @@
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("kitesurfing.jpg")%>)">
           Kitesurfing
         </div>
+
     </div>
 </div>
